--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^12.1.1",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "react-native-web": "~0.19.10",
+    "@expo/metro-runtime": "~3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
